pages/welcome/welcome.module.css
.welcome img {
	margin: -1.5rem 0 2.5rem;
}

.welcome h1 {
	position: absolute;
	top: 1.75rem;
	left: 50%;
	transform: translateX(-50%);
	letter-spacing: 0.2em;
	color: var(--quarternaryText);
	font-weight: 700;
	text-transform: uppercase;
}

.welcome h2 {
	position: absolute;
	top: 10rem;
	left: 3rem;
	font-size: 3.6rem;
	font-weight: 900;
	line-height: 120%;
	letter-spacing: 0.2em;
	width: 17rem;
	color: var(--quarternaryText);
}

.welcome > div {
	padding: 0 var(--phonePadding);
}

